# ModelArena

./: .gitignore  CLAUDE.md  Makefile  PRODUCT.md
backend/models/: Cargo.toml
backend/models/src/: cache.rs  filter.rs  main.rs  openrouter.rs  types.rs
backend/orchestrator/: Cargo.toml
backend/orchestrator/src/: fanout.rs  judge.rs  main.rs  openrouter.rs  routing.rs  scoring.rs  sse.rs  types.rs  validation.rs
docs/: references.md
docs/system-specs/: hld-modelarena.md  lld-frontend.md  lld-infra.md  lld-models-lambda.md  lld-orchestrator-lambda-adversarial-review.md  lld-orchestrator-lambda.md  review-status.md
frontend/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: benchmark.ts  models.ts
frontend/src/components/: AppBar.tsx  CostEstimate.tsx  JudgeDisclaimer.tsx  LiveResultsGrid.tsx  ModelCard.tsx  ModelFilterBar.tsx  ModelSelectionStep.tsx  ProgressHeader.tsx  PromptConfigStep.tsx  RankingsTable.tsx  RecommendationCard.tsx  ResponseDetailDialog.tsx  ResultCell.tsx  ResultsMatrix.tsx  ReviewStep.tsx  TestCaseCard.tsx  TestCaseList.tsx
frontend/src/hooks/: useBenchmark.ts  useCostEstimate.ts  useModels.ts
frontend/src/pages/: BenchmarkCreatePage.tsx  BenchmarkResultsPage.tsx  BenchmarkRunPage.tsx  LandingPage.tsx
frontend/src/state/: BenchmarkContext.tsx  types.ts
frontend/src/types/: benchmark.ts  models.ts  results.ts
infra/: package.json
infra/lib/: model-arena-stack.ts
infra/lib/utils/: waf-util.ts
