[package]
name = "models-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "models"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
